[tool.poetry]
name = "ohio-concept-drift"
version = "0.1.0"
description = ""
authors = ["Author Anonymous <author@anonymous.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.23"
pandas = "^2.1.0"
scipy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ohio = "ohio_concept_drift.main:run"
